# ai-agent-chatbot

./: .gitignore  README.md  requirements.txt
ai_agent_chatbot/: .gitignore  README.md  pyproject.toml
ai_agent_chatbot/src/ai_agent_chatbot/: crew.py  main.py
ai_agent_chatbot/src/ai_agent_chatbot/config/: agents.yaml  tasks.yaml
