[project]
name = "ai_agent_chatbot"
version = "0.1.0"
description = "ai-agent-chatbot using crewAI"
authors = [{ name = "Muhammed Afsal P M", email = "muhammedafsalpmtech@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.4.1",
]

[project.scripts]
ai_agent_chatbot = "ai_agent_chatbot.main:run"
run_crew = "ai_agent_chatbot.main:run"
train = "ai_agent_chatbot.main:train"
replay = "ai_agent_chatbot.main:replay"
test = "ai_agent_chatbot.main:test"
run_with_trigger = "ai_agent_chatbot.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
